1. 사진 유효성 검사할 때, 파일을 S3에 저장 후 검사하는 걸로 수정